# Distributed-LLM-Training-Stack

./: DesignNotes.md  Dockerfile  README.md  pyproject.toml
k8s/: README.md  job-worker.yaml  pvc.yaml  service-headless.yaml
scripts/: local_multigpu_example.sh  multinode_env_example.sh  summarize_profile.py
src/llmtrain/: __init__.py  checkpointing.py  cli.py  data.py  deepspeed_utils.py  distributed.py  faults.py  launcher.py  metrics.py  model.py  profiler.py  train.py
tests/: conftest.py  test_checkpointing.py  test_resume_smoke.py
